[gd_scene load_steps=38 format=2]

[ext_resource path="res://src/main/Main.gd" type="Script" id=1]
[ext_resource path="res://arts/menu/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://arts/menu/HostWindow.png" type="Texture" id=3]
[ext_resource path="res://fonts/Comic Book Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://arts/menu/MenuButtonHost.png" type="Texture" id=5]
[ext_resource path="res://arts/menu/MenuButtonJoin.png" type="Texture" id=6]
[ext_resource path="res://fonts/Comic Book.otf" type="DynamicFontData" id=7]
[ext_resource path="res://arts/menu/PlayersAwaitingWindow.png" type="Texture" id=8]
[ext_resource path="res://arts/menu/MenuButtonStart.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="DynamicFont" id=18]
size = 19
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -189.0
margin_right = 122.0
margin_bottom = 165.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Players"]
margin_right = 252.0
margin_bottom = 354.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Players"]
margin_left = 83.0706
margin_top = 286.0
margin_right = 170.071
margin_bottom = 334.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 9 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Players"]
margin_left = 61.347
margin_top = 55.0
margin_right = 221.347
margin_bottom = 283.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/cursor = SubResource( 7 )
custom_styles/selected_focus = SubResource( 8 )
custom_styles/bg_focus = SubResource( 9 )
custom_styles/cursor_unfocused = SubResource( 10 )
custom_styles/selected = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_selected = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0.0313726, 0.203922, 0.215686, 1 )
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -63.9297
margin_right = 193.0
margin_bottom = 103.07
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.5
margin_top = -96.5
margin_right = 186.5
margin_bottom = 91.5
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 101.0
margin_top = 11.1136
margin_right = 308.0
margin_bottom = 38.1136
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/read_only = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
placeholder_text = "|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="Connect"]
visible = false
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddress" type="LineEdit" parent="Connect"]
visible = false
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Connect"]
margin_left = 44.6979
margin_top = 77.0
margin_right = 146.698
margin_bottom = 156.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Connect"]
margin_left = 211.122
margin_top = 76.7475
margin_right = 313.122
margin_bottom = 155.747
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 25 )
custom_styles/focus = SubResource( 26 )
custom_styles/disabled = SubResource( 27 )
custom_styles/normal = SubResource( 28 )
icon = ExtResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Connect"]
visible = false
margin_left = 15.0
margin_top = 125.0
margin_right = 259.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
[connection signal="pressed" from="Players/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
